@@ -1,8 +1,6 @@
 package com.dataengine.datamanagement.interfaces.rest;
 
-import com.dataengine.common.interfaces.Response;
 import com.dataengine.datamanagement.interfaces.dto.DatasetTypeResponse;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -22,15 +20,14 @@ public class DatasetTypeController {
      * @return 数据集类型列表
      */
     @GetMapping
-    public ResponseEntity<Response<List<DatasetTypeResponse>>> getDatasetTypes() {
-        List<DatasetTypeResponse> types = Arrays.asList(
+    public List<DatasetTypeResponse> getDatasetTypes() {
+        return Arrays.asList(
             createDatasetType("IMAGE", "图像数据集", "用于机器学习的图像数据集", Arrays.asList("jpg", "jpeg", "png", "bmp", "gif")),
             createDatasetType("TEXT", "文本数据集", "用于文本分析的文本数据集", Arrays.asList("txt", "csv", "json", "xml")),
             createDatasetType("AUDIO", "音频数据集", "用于音频处理的音频数据集", Arrays.asList("wav", "mp3", "flac", "aac")),
             createDatasetType("VIDEO", "视频数据集", "用于视频分析的视频数据集", Arrays.asList("mp4", "avi", "mov", "mkv")),
-            createDatasetType("MULTIMODAL", "多模态数据集", "包含多种数据类型的数据集", Arrays.asList("*"))
+            createDatasetType("MULTIMODAL", "多模态数据集", "包含多种数据类型的数据集", List.of("*"))
         );
-        return ResponseEntity.ok(Response.ok(types));
     }
 
     private DatasetTypeResponse createDatasetType(String code, String name, String description, List<String> supportedFormats) {
@@ -44,13 +41,13 @@ public class DatasetTypeController {
     }
 
     private String getIconForType(String typeCode) {
-        switch (typeCode) {
-            case "IMAGE": return "🖼️";
-            case "TEXT": return "📄";
-            case "AUDIO": return "🎵";
-            case "VIDEO": return "🎬";
-            case "MULTIMODAL": return "📊";
-            default: return "📁";
-        }
+        return switch (typeCode) {
+            case "IMAGE" -> "🖼️";
+            case "TEXT" -> "📄";
+            case "AUDIO" -> "🎵";
+            case "VIDEO" -> "🎬";
+            case "MULTIMODAL" -> "📊";
+            default -> "📁";
+        };
     }
 }
